apps/example-apps/web-server/svc.yaml
apiVersion: v1
kind: Service
metadata:
  # labels:
  #   app: web-server
  #   component: web-server
  name: web-server
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  # selector:
  #   app: web-server
  #   component: web-server
  type: ClusterIP
