apps/example-apps/web-server/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-server
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: web-server
